<resources>
    <string name="app_name">Parla</string>
    <string name="etUsername">Username</string>
    <string name="etPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton"><u>Register</u></string>
    <string name="title_activity_registration">Parla</string>
    <string name="tvUsername">Username</string>
    <string name="tvOccupation">Occupation</string>
    <string name="registerButtonReg">Register</string>
    <string name="tvNationality">Nationality</string>
    <string name="tvGender">Gender</string>
    <string name="etPasswordReg">Password</string>
    <string name="emptyFields">One or more fields are empty</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="errorDialogTitle">Error in Registration</string>
    <string name="okText">OK</string>
    <string-array name="spGender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="spOccupation">
        <item>Student</item>
        <item>Researcher</item>
        <item>Teacher</item>
        <item>Management</item>
        <item>Business and Financial Operations</item>
        <item>Computer and Mathematical</item>
        <item>Architecture and Engineering</item>
        <item>Life, Physical, and Social Science</item>
        <item>Community and Social Service</item>
        <item>Legal</item>
        <item>Education, Training, and Library</item>
        <item>Arts, Design, Entertainment, Sports, and Media</item>
        <item>Healthcare Practitioners and Technical</item>
        <item>Healthcare Support</item>
        <item>Protective Service</item>
        <item>Personal Care and Service</item>
        <item>Sales and Related</item>
        <item>Office and Administrative Support</item>
    </string-array>
    <integer-array name="progressColor">
        <item>28</item>
        <item>134</item>
        <item>238</item>
        <item>255</item>
    </integer-array>
    <string name="title_activity_menu">Parla</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tpSentence">Sentence</string>
    <string name="tpPhonetic">Phonetic</string>
    <string name="tpStartButton">Start</string>
    <string name="tpStopButton">Stop</string>
    <string name="listenYourselfButton">Listen to yourself</string>
    <string name="listenNSButton">Listen to Native Speaker</string>
    <string name="title_activity_listen_ns">ListenNSActivity</string>
    <string name="title_activity_listen_native">Listen Native Speaker</string>
    <string name="title_activity_listening_native_speaker">Listen to Native Speaker</string>
    <string name="title_activity_listening_user">Listening to Yourself</string>
    <string name="listenNativeSentence">Sentence</string>
    <string name="listenNativePhonetic">Phonetic</string>
    <string name="listenNativeStressTextView">Stress</string>
    <string name="descriptionNativeTextView">A lot of things related to Stress or whatever we want</string>
    <string name="pressAndSpeakTextView">Touch to talk</string>
    <string name="listenSentenceImageButton">Listen native speaker sentence button</string>
    <string name="title_activity_listening">Listening</string>
    <string name="vowelChartImageView">Vowel chart feedback from server</string>
    <string name="stressTextView">FEEDBACK</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="fullscreenImageView">Full screen vowel chart image</string>
    <string name="imageViewFullscreen">image view full screen</string>
    <string name="subtitleMenuDrawer">Happy pronunciation</string>
    <string name="pictureMenuDrawer">Picture menu drawer</string>
    <string name="userDef">You:</string>
    <string name="nativeDef">Native:</string>
    <string name="infoFeedback">button for describing the given feedback</string>
    <string name="title_activity_maps">Map</string>
    <string name="infoMeaningTextView">Meaning</string>
    <string name="infoExampleTextView">Example</string>
    <string name="rememberMeCheckbox">Remember me</string>
    <string name="historyImage">vowel prediction of that day/time</string>
    <string name="reportNameTextView">Report Page</string>
    <string name="thank_you_image">thank you image</string>
    <string name="reportButton">Send Report</string>
    <string name="previous_word">Previous word</string>
    <string name="next_word">Next word</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="usernameEditTextRegistration">Username</string>
    <string name="fullscreen_button">fullscreen button</string>
    <string name="lower_is_better">How close the vowel pronunciation was to Native</string>
    <string name="user_trend_shape_should_be_similar_to_native">User trend shape should be similar to Native</string>
    <string name="the_red_cross_should_be_within_the_circle">The red cross should be within the circle</string>
    <string name="see_history">See History</string>
</resources>
