<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reportNameTextView"
            android:id="@+id/reportNameTextView"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thankYouImageview"
            android:contentDescription="@string/thank_you_image"
            android:src="@drawable/thanks"
            android:layout_weight="1" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportButton"
            android:layout_weight="1"
            android:id="@+id/sendReportButton" />

    </LinearLayout>

</RelativeLayout>