<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tpMainLayout"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/listenSentence"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/speaker_icon"
                android:background="@drawable/fab_background"
                android:backgroundTint="@color/abc_search_url_text_pressed"
                android:contentDescription="@string/listenSentenceImageButton"
                android:onClick="onClick" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tpSentence"
                android:id="@+id/tpSentence"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:gravity="center_vertical"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="334dp"
                android:weightSum="1">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabStartRecording"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/speak"
                    android:onClick="onClick"
                    app:borderWidth="0dp"
                    app:elevation="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.90"
                    android:background="#ffffff"
                    android:backgroundTint="#ffffff"
                    android:adjustViewBounds="false" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pressAndSpeakTextView"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_word"
                android:id="@+id/prevWordButton"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_word"
                android:id="@+id/nextWordButton"
                android:layout_gravity="right"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tpPhonetic"
                android:id="@+id/tpPhoneticSentence"
                android:textAlignment="center"
                android:gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>