<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="false"
    android:layout_alignParentStart="false"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".FeedbackActivity"
        android:id="@+id/feedbacksRelativeLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/information"
                    android:backgroundTint="@color/switch_thumb_normal_material_dark"
                    android:id="@+id/infoImageButton"
                    android:contentDescription="@string/infoFeedback" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/stressTextView"
                    android:id="@+id/resultsTextView"
                    android:textAlignment="center"
                    android:textColor="#e61818"
                    android:textStyle="bold"
                    android:singleLine="false"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/nativeDef"
                    android:id="@+id/textView"
                    android:textAlignment="center"
                    android:gravity="center_vertical" />

                <davideberdin.goofing.utilities.AutoResizeTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/feedbacksNative"
                    android:textAlignment="center"
                    android:text="test"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|right"
                    android:layout_weight="1" />

            </LinearLayout>

            <davideberdin.goofing.utilities.AutoResizeTextView
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/feedbacksNativeSentence"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|right"
                android:gravity="center" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/userDef"
                    android:id="@+id/textView3"
                    android:textAlignment="center"
                    android:gravity="center_vertical" />

                <davideberdin.goofing.utilities.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/feedbacksUser"
                    android:textAlignment="center"
                    android:text="test" />

            </LinearLayout>

            <davideberdin.goofing.utilities.AutoResizeTextView
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="test"
                android:id="@+id/feedbacksUserSentence"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"
                android:textAlignment="center" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <davideberdin.goofing.utilities.AutoResizeTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/infoWERTextView"
                android:textColor="#000000"
                android:textAlignment="center" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/user_trend_shape_should_be_similar_to_native"
                android:lines="1"
                android:textStyle="bold"
                android:textAlignment="center" />

            <com.github.mikephil.charting.charts.ScatterChart
                android:id="@+id/pitchScatterChart"
                android:layout_height="300dp"
                android:layout_width="match_parent"
                android:layout_weight="1" />

            <!--<ImageButton-->
                <!--android:layout_width="29dp"-->
                <!--android:layout_height="29dp"-->
                <!--android:id="@+id/fullScreenButton"-->
                <!--android:layout_gravity="right"-->
                <!--style="@style/Widget.Design.FloatingActionButton"-->
                <!--android:background="@drawable/fullscreen"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:contentDescription="@string/fullscreen_button" />-->

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/the_red_cross_should_be_within_the_circle"
                android:id="@+id/gmmTextView"
                android:lines="1"
                android:textStyle="bold"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:id="@+id/vowelChartImageView"
                android:contentDescription="@string/vowelChartImageView"
                android:cropToPadding="false" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_history"
                android:id="@+id/historyButton" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
