<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fillViewport="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoMeaningTextView"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:id="@+id/infoMeaningTitle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/infoMeaningTextView" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoExampleTextView"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:id="@+id/infoExampleTitle" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/infoExampleTextView" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <Button
                android:layout_width="77dp"
                android:layout_height="28dp"
                android:text="@string/okText"
                android:id="@+id/infoOKButton"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="#b3b3b3"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>